--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,12 @@
 /node_modules
 /.pnp
 .pnp.js
+/client/node_modules
+/server/node_modules
+/client/.env
+/server/.env
+/.pnp
+.pnp.js
 
 # testing
 /coverage
